# Va

./: main.py  pyproject.toml
cogs/: help.py  infos.py  moderation.py  music.py  quiz.py  roles.py  rules.py  suggestion.py  ttt.py  tttest.py  würfelgame.py
tt_listen/: fahrzeug  lokation
