[tool.poetry]
name = "Venom Aimz Bot"
version = "1.0.0"
description = ""
authors = ["ItIzYe <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
discord = "^1.0.1"
choice = "^0.1"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
googletrans = "^3.0.0"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
